--- a/souley.css
+++ b/souley.css
@@ -3,8 +3,9 @@
 }
 
 body{
-  background-color: rgb(125, 125, 125);
+  background-color: rgb(255, 255, 255);
   align-items: center;
+  margin: 0px;
 }
 h1{
   text-align: center;
@@ -13,25 +14,45 @@ h1{
 p{
   font-size: 25px;
 }
-.img{
-  width: 10%;
-  height: 10% ;
-  border-radius: 4px;
-}
-
-.road{
   
-  /* added flex */
-  display: flex;
-  flex-direction:row ;
-  justify-content: space-between ;
+.img{
+  width: 17%;
+  height: 17% ;
+  border-radius: 50%;
+}
+
+.page-2{
+  font-size: 25px;
+  
+}
+
+.nav-bar ul{
+  list-style-type: none;
+  background-color: rgb(87, 86, 86);
+  padding:0px;
+  margin: 0px;
+  overflow: hidden;
+}
+.nav-bar a{
+text-decoration: none;
+padding: 15px;
+color: rgb(255, 255, 255);
+display: block;
+text-align: center;
+}
+.nav-bar a:hover{
+  background-color: rgba(0, 0, 0, 0.391);
+}
+
+.nav-bar li{
+  float: left;
 
 }
 
-.side1{
-  position: absolute;
-  left: 0px;
+.h2{
+  text-align: left;
 }
 
-
-
+.left{
+  text-align: left;
+}
